--- a/projects/project1/pom.xml
+++ b/projects/project1/pom.xml
@@ -18,6 +18,16 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.1.1.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
