--- a/projects/project1/pom.xml
+++ b/projects/project1/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>6.1.1.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
